--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,7 @@
 * {
+    /* The width and height contains the content, padding and border */
     box-sizing: border-box;
+    /* Box Model */
     padding: 0;
     margin: 0;
 }
@@ -8,193 +10,188 @@ body {
     background-color: #d9dcd6;
 }
 
+/* header */
 .header {
+    /* Box Model */
     padding: 20px;
+    /* Other */
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color: #2a607c;
     color: #ffffff;
 }
 
+/* Heading of header */
 .header h1 {
+    /* Display and Font Size */
     display: inline-block;
     font-size: 48px;
 }
 
+/* span element in the heading of the header */
 .header h1 .seo {
     color: #d9dcd6;
 }
 
+/* nav element */
 .header nav {
+    /* Box Model */
     padding-top: 15px;
     margin-right: 20px;
+    /* Element floats to the right of its container */
     float: right;
+    /* Other */
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 20px;
 }
 
+/* Header's unordered list */
 .header nav ul {
     list-style-type: none;
 }
 
+/* Header's list items of unordered list */
 .header nav ul li {
+    /* Display and Box Model */
     display: inline-block;
     margin-left: 25px;
 }
 
+/* Anchors */
 a {
     color: #ffffff;
+    /* Deactivate decoration added to text */
     text-decoration: none;
 }
 
+/* Paragraphs */
 p {
     font-size: 16px;
 }
 
+/* Hero section */
 .hero {
+    /* Box Model */
     height: 800px;
     width: 100%;
     margin-bottom: 25px;
+    /* Other */
     background-image: url("../images/digital-marketing-meeting.jpg");
     background-size: cover;
     background-position: center;
 }
 
+/* Left aligned elements */
 .float-left {
+    /* Element floats to the left of its container */
     float: left;
+    /* Box Model */
     margin-right: 25px;
 }
 
+/* Right aligned elements */
 .float-right {
+    /* Element floats to the right of its container */
     float: right;
+    /* Box Model */
     margin-left: 25px;
 }
 
+/* Content section */
 .content {
+    /* Display and Box Model */
     width: 75%;
     display: inline-block;
     margin-left: 20px;
 }
 
+/* Aside */
 .benefits {
+    /* Box Model */
     margin-right: 20px;
     padding: 20px;
-    clear: both;
-    float: right;
     width: 20%;
     height: 100%;
+    /* To push the element below both left and right floated elements */
+    clear: both;
+    /* Element floats to the right of its container */
+    float: right;
+    /* Other */
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #2589bd;
 }
 
-.benefit-lead {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-.benefit-brand {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
+/* Articles in aside */
+.benefit-lead,
+.benefit-brand,
 .benefit-cost {
+    /* Box Model */
     margin-bottom: 32px;
     color: #ffffff;
 }
 
-.benefit-lead h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-brand h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
+/* Headings of aside articles */
+.benefit-lead h3,
+.benefit-brand h3,
 .benefit-cost h3 {
+    /* Box Model */
     margin-bottom: 10px;
+    /* Centers the text */
     text-align: center;
 }
 
-.benefit-lead img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-
-.benefit-brand img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-
+/* Images in aside */
+.benefit-lead img,
+.benefit-brand img,
 .benefit-cost img {
+    /* Display and Box Model */
     display: block;
     margin: 10px auto;
     max-width: 150px;
 }
 
-.search-engine-optimization {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-.online-reputation-management {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
+/* Articles in the content section */
+.search-engine-optimization,
+.online-reputation-management,
 .social-media-marketing {
+    /* Box Model */
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
+    /* Other */
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #0072bb;
     color: #ffffff;
 }
 
-.search-engine-optimization img {
-    max-height: 200px;
-}
-
-.online-reputation-management img {
-    max-height: 200px;
-}
-
+/* Images in the content section articles */
+.search-engine-optimization img,
+.online-reputation-management img,
 .social-media-marketing img {
+    /* Box Model */
     max-height: 200px;
 }
 
-.search-engine-optimization h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-.online-reputation-management h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
+/* Content section article headings */
+.search-engine-optimization h2,
+.online-reputation-management h2,
 .social-media-marketing h2 {
+    /* Box Model */
     margin-bottom: 20px;
     font-size: 36px;
 }
 
+/* Footer */
 .footer {
+    /* Box Model */
     padding: 30px;
     clear: both;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    /* Centers the text */
     text-align: center;
+    font-size: inherit;
 }
 
-.footer h2 {
+/* Heading of the footer */
+.footer h4 {
     font-size: 20px;
 }
