Adjusted the background color of aside container for accessible color contrast ratio

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -117,7 +117,7 @@ p {
     float: right;
     /* Other */
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #227eaf;
+    background-color: #165D83;
 }
 
 /* Articles in aside */
